--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongoose": "^8.7.3",
     "next": "15.0.1",
